--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/backend.js", "use": "@vercel/node" }
+    {
+      "src": "api/backend.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/backend.js" }
+    { "src": "/api/(.*)", "dest": "api/backend.js" },
+    { "src": "/(.*)", "dest": "frontend/build/$1" }
   ]
 }
