removing unused import

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/backend.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    }
+    { "src": "api/backend.js", "use": "@vercel/node" },
+    { "src": "frontend/package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/backend.js" },
-    { "src": "/(.*)", "dest": "frontend/build/$1" }
+    { "src": "/api/(.*)", "dest": "/api/backend.js" },
+    { "src": "/(.*)", "dest": "/frontend/build/index.html" }
   ]
 }
