vercel config for only frontend

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/backend.js", "use": "@vercel/node" },
-    { "src": "frontend/package.json", "use": "@vercel/static-build" }
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/backend.js" },
     { "src": "/(.*)", "dest": "/frontend/build/index.html" }
   ]
 }
